8074841: Resolve disabled warnings for the JVMTI demo compiledMethodLoad 8074842: Resolve disabled warnings for the JVMTI demo waiters

Reviewed-by: alanb, ihse, dsamersoff